--- a/01-configmap.yaml
+++ b/01-configmap.yaml
@@ -5,7 +5,13 @@ metadata:
   namespace: nextgen
 data:
   config.ini: |
+    [s3]
+    s3_path = s3://ai-pipeline-raw-data/data/data_statistics/bps/%%s
+    key = GLZG2JTWDFFSCQVE7TSQ
+    secret = VjTXOpbhGvYjDJDAt2PNgbxPKjYA4p4B7Btmm4Tw
+    endpoint_url = http://10.12.1.149:8000
 
     [beanstalk]
     host = 192.168.150.21
     port = 11300
+    tube = sc_bps_daerah_detail
