--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ multidict==6.0.5
 playwright==1.45.1
 pyee==11.1.0
 python-dateutil==2.9.0.post0
+requests==2.32.3
 s3fs==2024.6.1
 six==1.16.0
 typing_extensions==4.12.2
