--- a/deployment/pusher/Dockerfile
+++ b/deployment/pusher/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.11-bookworm
 
-COPY requirements.txt /
+COPY ../../requirements.txt /
 
 WORKDIR /
 
@@ -9,6 +9,6 @@ RUN pip install -r requirements.txt \
 
 WORKDIR /app
 
-COPY . /app
+COPY ../../. /app
 
 ENTRYPOINT [ "python", "pusher.py" ]
