--- a/config.ini
+++ b/config.ini
@@ -7,4 +7,4 @@ endpoint_url = http://10.12.1.149:8000
 [beanstalk]
 host = 192.168.20.175
 port = 11300
-tube = sc_bps_daerah_detail
+tube = sc_bps_daerah_detail_new_fix
